--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "dependencies": {
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
+    "redux": "^3.7.2",
+    "redux-form": "^7.1.2",
+    "redux-logger": "^3.0.6",
     "redux-saga": "^0.16.0",
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.76.0"
