--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "redux-logger": "^3.0.6",
     "redux-saga": "^0.16.0",
     "semantic-ui-css": "^2.2.12",
-    "semantic-ui-react": "^0.76.0"
+    "semantic-ui-react": "^0.76.0",
+    "validator": "^9.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
